Add PaymentMethod response
